// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h1 empty heading 1`] = `
Object {
  "counter": 4,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 4,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 multiple-word heading 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 only syntax 1`] = `
Object {
  "counter": 3,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 3,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h1 single-word heading 1`] = `
Object {
  "counter": 7,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 7,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with nested delete 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 7,
      "to": 9,
      "type": "syntax",
    },
    Object {
      "from": 12,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 7,
          "to": 14,
          "type": "delete",
        },
      ],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with nested emphasis 1`] = `
Object {
  "counter": 13,
  "decorations": Array [
    Object {
      "from": 7,
      "to": 8,
      "type": "syntax",
    },
    Object {
      "from": 11,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 7,
          "to": 12,
          "type": "emphasis",
        },
      ],
      "to": 13,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with nested inlineCode 1`] = `
Object {
  "counter": 13,
  "decorations": Array [
    Object {
      "from": 7,
      "to": 8,
      "type": "syntax",
    },
    Object {
      "from": 11,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 7,
          "to": 12,
          "type": "inlineCode",
        },
      ],
      "to": 13,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with nested strong 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 7,
      "to": 9,
      "type": "syntax",
    },
    Object {
      "from": 12,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 7,
          "to": 14,
          "type": "strong",
        },
      ],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace inner 1`] = `
Object {
  "counter": 10,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 10,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace inner and trailing 1`] = `
Object {
  "counter": 13,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 13,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace leading 1`] = `
Object {
  "counter": 10,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 10,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h1 with whitespace leading and inner 1`] = `
Object {
  "counter": 13,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 13,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h1 with whitespace leading and trailing 1`] = `
Object {
  "counter": 13,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 13,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h1 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 16,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 16,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h1 with whitespace trailing 1`] = `
Object {
  "counter": 10,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 10,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace trailing syntax characters 1`] = `
Object {
  "counter": 9,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 9,
      "type": "heading",
    },
  ],
}
`;

exports[`h1 with whitespace trailing syntax characters and spaces 1`] = `
Object {
  "counter": 14,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 3,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 1,
      },
      "from": 0,
      "marks": Array [],
      "to": 14,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 empty heading 1`] = `
Object {
  "counter": 5,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 5,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 multiple-word heading 1`] = `
Object {
  "counter": 16,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 16,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 only syntax 1`] = `
Object {
  "counter": 4,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 4,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h2 single-word heading 1`] = `
Object {
  "counter": 8,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 8,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with nested delete 1`] = `
Object {
  "counter": 16,
  "decorations": Array [
    Object {
      "from": 8,
      "to": 10,
      "type": "syntax",
    },
    Object {
      "from": 13,
      "to": 15,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 8,
          "to": 15,
          "type": "delete",
        },
      ],
      "to": 16,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with nested emphasis 1`] = `
Object {
  "counter": 14,
  "decorations": Array [
    Object {
      "from": 8,
      "to": 9,
      "type": "syntax",
    },
    Object {
      "from": 12,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 8,
          "to": 13,
          "type": "emphasis",
        },
      ],
      "to": 14,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with nested inlineCode 1`] = `
Object {
  "counter": 14,
  "decorations": Array [
    Object {
      "from": 8,
      "to": 9,
      "type": "syntax",
    },
    Object {
      "from": 12,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 8,
          "to": 13,
          "type": "inlineCode",
        },
      ],
      "to": 14,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with nested strong 1`] = `
Object {
  "counter": 16,
  "decorations": Array [
    Object {
      "from": 8,
      "to": 10,
      "type": "syntax",
    },
    Object {
      "from": 13,
      "to": 15,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 8,
          "to": 15,
          "type": "strong",
        },
      ],
      "to": 16,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace inner 1`] = `
Object {
  "counter": 11,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 11,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace inner and trailing 1`] = `
Object {
  "counter": 14,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 14,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace leading 1`] = `
Object {
  "counter": 11,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 11,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h2 with whitespace leading and inner 1`] = `
Object {
  "counter": 14,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 14,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h2 with whitespace leading and trailing 1`] = `
Object {
  "counter": 14,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 14,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h2 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 17,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 17,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h2 with whitespace trailing 1`] = `
Object {
  "counter": 11,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 11,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace trailing syntax characters 1`] = `
Object {
  "counter": 11,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 11,
      "type": "heading",
    },
  ],
}
`;

exports[`h2 with whitespace trailing syntax characters and spaces 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 4,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 2,
      },
      "from": 0,
      "marks": Array [],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 empty heading 1`] = `
Object {
  "counter": 6,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 6,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 multiple-word heading 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 only syntax 1`] = `
Object {
  "counter": 5,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 5,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h3 single-word heading 1`] = `
Object {
  "counter": 9,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 9,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with nested delete 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 9,
      "to": 11,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 16,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 9,
          "to": 16,
          "type": "delete",
        },
      ],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with nested emphasis 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 9,
      "to": 10,
      "type": "syntax",
    },
    Object {
      "from": 13,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 9,
          "to": 14,
          "type": "emphasis",
        },
      ],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with nested inlineCode 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 9,
      "to": 10,
      "type": "syntax",
    },
    Object {
      "from": 13,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 9,
          "to": 14,
          "type": "inlineCode",
        },
      ],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with nested strong 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 9,
      "to": 11,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 16,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 9,
          "to": 16,
          "type": "strong",
        },
      ],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace inner 1`] = `
Object {
  "counter": 12,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 12,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace inner and trailing 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace leading 1`] = `
Object {
  "counter": 12,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 12,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h3 with whitespace leading and inner 1`] = `
Object {
  "counter": 15,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 15,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h3 with whitespace leading and trailing 1`] = `
Object {
  "counter": 15,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 15,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h3 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 18,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h3 with whitespace trailing 1`] = `
Object {
  "counter": 12,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 12,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace trailing syntax characters 1`] = `
Object {
  "counter": 13,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 13,
      "type": "heading",
    },
  ],
}
`;

exports[`h3 with whitespace trailing syntax characters and spaces 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 5,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 3,
      },
      "from": 0,
      "marks": Array [],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 empty heading 1`] = `
Object {
  "counter": 7,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 7,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 multiple-word heading 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 only syntax 1`] = `
Object {
  "counter": 6,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 6,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h4 single-word heading 1`] = `
Object {
  "counter": 10,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 10,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with nested delete 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 10,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 17,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 10,
          "to": 17,
          "type": "delete",
        },
      ],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with nested emphasis 1`] = `
Object {
  "counter": 16,
  "decorations": Array [
    Object {
      "from": 10,
      "to": 11,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 15,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 10,
          "to": 15,
          "type": "emphasis",
        },
      ],
      "to": 16,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with nested inlineCode 1`] = `
Object {
  "counter": 16,
  "decorations": Array [
    Object {
      "from": 10,
      "to": 11,
      "type": "syntax",
    },
    Object {
      "from": 14,
      "to": 15,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 10,
          "to": 15,
          "type": "inlineCode",
        },
      ],
      "to": 16,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with nested strong 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 10,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 17,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 10,
          "to": 17,
          "type": "strong",
        },
      ],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace inner 1`] = `
Object {
  "counter": 13,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 13,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace inner and trailing 1`] = `
Object {
  "counter": 16,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 16,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace leading 1`] = `
Object {
  "counter": 13,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 13,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h4 with whitespace leading and inner 1`] = `
Object {
  "counter": 16,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 16,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h4 with whitespace leading and trailing 1`] = `
Object {
  "counter": 16,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 16,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h4 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 19,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 19,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h4 with whitespace trailing 1`] = `
Object {
  "counter": 13,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 13,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace trailing syntax characters 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h4 with whitespace trailing syntax characters and spaces 1`] = `
Object {
  "counter": 23,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 6,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 4,
      },
      "from": 0,
      "marks": Array [],
      "to": 23,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 empty heading 1`] = `
Object {
  "counter": 8,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 8,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 multiple-word heading 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 only syntax 1`] = `
Object {
  "counter": 7,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 7,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h5 single-word heading 1`] = `
Object {
  "counter": 11,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 11,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with nested delete 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 11,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 18,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 11,
          "to": 18,
          "type": "delete",
        },
      ],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with nested emphasis 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 11,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 16,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 11,
          "to": 16,
          "type": "emphasis",
        },
      ],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with nested inlineCode 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 11,
      "to": 12,
      "type": "syntax",
    },
    Object {
      "from": 15,
      "to": 16,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 11,
          "to": 16,
          "type": "inlineCode",
        },
      ],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with nested strong 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 11,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 18,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 11,
          "to": 18,
          "type": "strong",
        },
      ],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace inner 1`] = `
Object {
  "counter": 14,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 14,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace inner and trailing 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace leading 1`] = `
Object {
  "counter": 14,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 14,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h5 with whitespace leading and inner 1`] = `
Object {
  "counter": 17,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 17,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h5 with whitespace leading and trailing 1`] = `
Object {
  "counter": 17,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 17,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h5 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 20,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 20,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h5 with whitespace trailing 1`] = `
Object {
  "counter": 14,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 14,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace trailing syntax characters 1`] = `
Object {
  "counter": 17,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 17,
      "type": "heading",
    },
  ],
}
`;

exports[`h5 with whitespace trailing syntax characters and spaces 1`] = `
Object {
  "counter": 26,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 7,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 5,
      },
      "from": 0,
      "marks": Array [],
      "to": 26,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 empty heading 1`] = `
Object {
  "counter": 9,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 9,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 multiple-word heading 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 only syntax 1`] = `
Object {
  "counter": 8,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 8,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h6 single-word heading 1`] = `
Object {
  "counter": 12,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 12,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with nested delete 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 12,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 17,
      "to": 19,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 12,
          "to": 19,
          "type": "delete",
        },
      ],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with nested emphasis 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 12,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 17,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 12,
          "to": 17,
          "type": "emphasis",
        },
      ],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with nested inlineCode 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 12,
      "to": 13,
      "type": "syntax",
    },
    Object {
      "from": 16,
      "to": 17,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 12,
          "to": 17,
          "type": "inlineCode",
        },
      ],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with nested strong 1`] = `
Object {
  "counter": 20,
  "decorations": Array [
    Object {
      "from": 12,
      "to": 14,
      "type": "syntax",
    },
    Object {
      "from": 17,
      "to": 19,
      "type": "syntax",
    },
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [
        Object {
          "from": 12,
          "to": 19,
          "type": "strong",
        },
      ],
      "to": 20,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace inner 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace inner and trailing 1`] = `
Object {
  "counter": 18,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace leading 1`] = `
Object {
  "counter": 15,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 15,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h6 with whitespace leading and inner 1`] = `
Object {
  "counter": 18,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h6 with whitespace leading and trailing 1`] = `
Object {
  "counter": 18,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 18,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h6 with whitespace leading, inner, and trailing 1`] = `
Object {
  "counter": 21,
  "decorations": Array [],
  "nodes": Array [
    Object {
      "from": 0,
      "marks": Array [],
      "to": 21,
      "type": "paragraph",
    },
  ],
}
`;

exports[`h6 with whitespace trailing 1`] = `
Object {
  "counter": 15,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 15,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace trailing syntax characters 1`] = `
Object {
  "counter": 19,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 19,
      "type": "heading",
    },
  ],
}
`;

exports[`h6 with whitespace trailing syntax characters and spaces 1`] = `
Object {
  "counter": 29,
  "decorations": Array [
    Object {
      "from": 1,
      "to": 8,
      "type": "syntax",
    },
  ],
  "nodes": Array [
    Object {
      "attrs": Object {
        "level": 6,
      },
      "from": 0,
      "marks": Array [],
      "to": 29,
      "type": "heading",
    },
  ],
}
`;
